<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:outlineProvider="none"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textDisplay"
        android:layout_width="375dp"
        android:layout_height="155dp"
        android:layout_marginTop="208dp"
        android:background="@drawable/text_bg"
        android:drawablePadding="-10dp"
        android:hint="@string/speech_to_text_result_will_be_shown_here"
        android:includeFontPadding="false"
        android:outlineProvider="none"
        android:scrollbars="vertical"
        android:textColor="@color/textcolor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/speakBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/_800770"
        android:backgroundTint="@color/textcolor"
        android:contentDescription="@string/speech2text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/indeterminateBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDisplay"
        tools:ignore="MissingConstraints"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textOutput"
        android:layout_width="375dp"
        android:layout_height="166dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/text_bg"
        android:scrollbars="vertical"
        android:text=""
        android:textColor="@color/textcolor"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indeterminateBar"
        tools:ignore="MissingConstraints"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/baseline_settings_cog_24"
        android:backgroundTint="@color/textcolor"
        android:contentDescription="@string/settings"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/toggleButton"
        style="@style/toggleButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="right"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/ic_toggle_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>